+ new
* changed
- removed

--------------------------------------------------------------------------------

👉 OpenMoji 12.2 - XX XXX 2020

+ Added Transgender Flag

+ Fix:
  -  finger height in Person Raising Hand
  -  black and white Pomegranate
  -  add leaf and stem in Poppy

* Improved formatting of all SVG files with automated attributes sorting/cleaning


--------------------------------------------------------------------------------
👉 OpenMoji 12.1 - 23 December 2019

Happy Holidays release! Many improvements, fixes and a few new OpenMojis!
Special thanks to Carlin Mackenzie @carlinmack for his great and plenty contributions!

+ Added Poppy (War Remembrance Day) by @carlinmack
  suggested by @inferno986return
+ Added Youtube and Github logo, contributed by Romain Bazile @gromain
+ Added pomegranate, poppy, exhausted, incredulous face to extra emojis @carlinmack

* Improved "red hair" color of 1F9B0, 1F468-200D-1F9B0, 1F469-200D-1F9B0
  to better distinct from other hair colors.
* Fix OpenMojis with blond, red or white hair by @sourgift
* Fix 1F471 'person: blond hair' to resemble '1F9D1 person' by @sourgift
* Fix 1F1F2-1F1F7 flag Mauritania added red stripes by @jonpdixon
* Fix 1F1F5-1F1FC flag Palau, increased size of yellow circle by @jonpdixon
* Removed shadows from spade, heart, diamond and club suit (2660, 2663, 2665, 2666)
* Removed shadows from all hearts in smileys-emotion/emotion/ (2764, 2763, 1F499,
  1F498, 1F497, 1F496, 1F495, 1F494, 1F493, 1F90E, 1F90D, 1F49F, 1F49E, 1F49D, 1F49C,
  1F49B, 1F49A, 1F48C, 1F9E1, 1F5A4)
* Redesign pleading, flushed, tired and weary, dumpling emoji, face screaming with fear,
  foot emoji by Carlin MacKenzie @carlinmack
* Fix smirking, frowning with open mouth and unamused face, melon colours,
  right speech bubble, thought balloon and speech ballon Seychelles flag,
  bikini, banana by Carlin MacKenzie @carlinmack
* Fix face and expression of 1F62C grimacing face
* Improved wings of 1F47C baby angel