@@ -75,6 +75,7 @@ E181,extras-openmoji,people,drunk person,"person, person-activity, person-gestur
 E180,extras-openmoji,people,persons hugging,"love, harmony, humans, like, making out, arms",Kai Wanschura,2018-04-18
 E182,extras-openmoji,people,person with dog,"person, person-activity, dog, walking, animal, pet",Johanna Wellnitz,2018-04-18
 E183,extras-openmoji,people,trump,"trump, donald, president, america, usa",Sina Schulz,2018-04-18
+E183,extras-openmoji,people,horse riding,"equestrian",Carlin MacKenzie,2020-01-11
 E1D1,extras-openmoji,technology,keyboard,"keyboard, key, type",Kai Magnus Müller,2018-04-18
 E1C5,extras-openmoji,technology,mouse,,Baris Camli,2018-04-18
 E1CC,extras-openmoji,technology,tablet,"technology, device, portable, screen, phablet, ipad",Kai Wanschura,2018-04-18
