@@ -53278,6 +53278,23 @@
     "order": ""
   },
   {
+    "emoji": "",
+    "hexcode": "E183",
+    "group": "extras-openmoji",
+    "subgroups": "people",
+    "annotation": "horse riding",
+    "tags": "",
+    "openmoji_tags": "equestrian",
+    "openmoji_author": "Carlin MacKenzie",
+    "openmoji_date": "2020-01-11",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E280",
     "group": "extras-openmoji",
